pass a test that checks if registered time from timekeeper is added